# bundler-spec-tests

./: .gitignore  .gitmodules  Dockerfile  README.md  dbuild.sh  pyproject.toml
.circleci/: config.yml
docker/: Dockerfile
scripts/: aabundler-launcher  clone-helper
tests/: conftest.py  find_min.py  test_rpc.py  transaction_eip_7702.py  types.py  user_operation_erc4337.py  utils.py
tests/bundle/: conftest.py  test_bundle.py  test_codehash.py  test_paymaster.py  test_stake_rules.py  test_storage_rules.py
tests/contracts/: Create2.sol  EP.sol  Helper.sol  IAggregator.sol  IEntryPoint.sol  IPaymaster.sol  IStakeManager.sol  ITestAccount.sol  IWallet.sol  OpcodeRules.sol  OpcodeTestContract.sol  SimpleWallet.sol  Stakable.sol  Test7702Wallet.sol  TestCodeHashFactory.sol  TestCoin.sol  TestFactory.sol  TestFakeWalletPaymaster.sol  TestFakeWalletToken.sol  TestProxy.sol  TestReputationAccount.sol  TestReputationAccountFactory.sol  TestReputationPaymaster.sol  TestRuleFactory.sol  TestRulePaymaster.sol  TestRulesAccount.sol  TestRulesAccountFactory.sol  TestRulesAggregator.sol  TestRulesDeployer.sol  TestRulesFactory.sol  TestRulesPaymaster.sol  TestRulesTarget.sol  TestSimplePaymaster.sol  UserOpGetters.sol  UserOperation.sol  ValidationRules.sol  ValidationRulesStorage.sol
tests/contracts/rip7560/: OpcodesTestAccount.sol  OpcodesTestAccountFactory.sol  OpcodesTestPaymaster.sol  RIP7560Deployer.sol  RIP7560Paymaster.sol  RIP7560TestRulesAccount.sol  RIP7560TestRulesAccountDeployer.sol  RIP7560TestTimeRangeAccount.sol  RIP7560TestTimeRangePaymaster.sol  RIP7560TransactionStruct.sol  RIP7560TransactionType4.sol  TestAccount.sol  TestAccountEnvInfo.sol  TestAccountErigon.sol  TestAccountFactory.sol  TestCounter.sol  TestPaymaster.sol  TestPostOpPaymaster.sol
tests/contracts/rip7560/gaswaste/: GasWasteAccount.sol  GasWastePaymaster.sol
tests/contracts/rip7560/interface/: IRip7560Account.sol  IRip7560EntryPoint.sol  IRip7560Paymaster.sol
tests/contracts/rip7560/utils/: RIP7560Utils.sol  TestUtils.sol
tests/devnet/: test_devnet.py
tests/eip7702/: test_eip7702_tuple_userop.py  transaction_eip_7702.py
tests/generator/: README.md  main.py  models.py  random_ssz.py
tests/one/rpc/: conftest.py  test_eth_chainId.py
tests/opbanning/: conftest.py  test_op_banning.py
tests/p2p/: test_p2p.py
tests/reputation/: test_reputation.py
tests/rip7560/: conftest.py  test_env_opcodes.py  test_gas_usage.py  test_rip7560.py  test_rip7712.py  test_send_failed.py  test_validation_rules.py  types.py
tests/rip7560/devnet/: test_devnet.py
tests/rpc/: conftest.py  test_eth_chainId.py  test_eth_estimateUserOperationGas.py  test_eth_getUserOperationByHash.py  test_eth_getUserOperationReceipt.py  test_eth_getUserOperationTransactionByHash.py  test_eth_sendUserOperation.py  test_eth_supportedEntryPoints.py  test_sendUserOperation.py  test_simulateUserOperation.py  test_supportedEntryPoints.py
tests/single/: test_gas.py
tests/single/bundle/: test_bundle.py  test_codehash.py  test_paymaster.py  test_storage_rules.py
tests/single/eip7702/: test_eip7702_tuple_userop.py
tests/single/gas/: test_eip_7623.py  test_pre_verification_gas_calculation.py
tests/single/opbanning/: alt_mempool_cases.py  test_create.py  test_op_banning.py
tests/single/reputation/: test_erep.py  test_replace.py  test_reputation.py
tests/single/rpc/: conftest.py  test_eth_estimateUserOperationGas.py  test_eth_getUserOperationByHash.py  test_eth_getUserOperationReceipt.py  test_eth_sendUserOperation.py  test_eth_supportedEntryPoints.py
