[tool.poetry]
name = "bundler-spec-tests"
version = "0.4.0"
description = ""
authors = ["shahafn <shahaflol@gmail.com>"]
readme = "README.md"
packages = [{include = "bundler_spec_tests"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.black]
line-length = 88

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "W0621"] # missing-module-docstring, redefined-outer-name as it conflicts with pytest fixtures
ignored-classes = ["Error"]
good-names = ["w3", "id", "i", "s"]
good-names-rgxs = ["test_.*"]
max-line-length=120
max-branches=15

[tool.pdm]
[tool.pdm.build]
includes = ["bundler_spec_tests"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
update-deps = {shell = "git submodule update --init --recursive && cd @account-abstraction && yarn && yarn compile &&  cd ../spec && yarn && yarn build"}
test = "pytest --tb=short -rA -W ignore::DeprecationWarning --url http://localhost:3000/rpc --entry-point 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 --ethereum-node http://127.0.0.1:8545/ tests/single"
p2ptest = "pytest --tb=short -rA -W ignore::DeprecationWarning --url http://localhost:3000/rpc --entry-point 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 --ethereum-node http://127.0.0.1:8545/ tests/p2p"
lint = "pylint tests"
format = "black tests"

[project]
name = "bundler-spec-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "shahafn", email = "shahaflol@gmail.com"},
]
dependencies = [
    "pytest>=7.2.0",
    "requests>=2.28.1",
    "setuptools>=65.6.0",
    "eth-utils>=1.2.0",
    "py-solc-x>=1.1.1",
    "eth-tester>=0.6.0b6",
    "web3>=5.31.1",
    "jsonrpcclient>=4.0.2",
    "jsonschema>=4.17.3",
    "black>=22.12.0",
    "pylint>=2.15.8",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
readme = "README.md"

