[tool.poetry]
name = "bundler-spec-tests"
version = "0.4.0"
description = ""
authors = ["shahafn <shahaflol@gmail.com>"]
readme = "README.md"
packages = [{include = "bundler_spec_tests"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.black]
line-length = 88

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "W0621", "R0914", "R1735"] # missing-module-docstring, redefined-outer-name as it conflicts with pytest fixtures, too-many-locals, use-dict-literal
ignored-classes = ["Error"]
good-names = ["w3", "id", "i", "s"]
good-names-rgxs = ["test_.*"]
max-line-length=120
max-branches=15

[tool.pdm]
[tool.pdm.build]
includes = ["bundler_spec_tests"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
update-deps = {shell = "git submodule update --init --recursive && cd @account-abstraction && yarn && yarn compile &&  cd ../spec && yarn && yarn build && cd ../@rip7560 && yarn && yarn compile-hardhat"}
update-deps-remote = {shell = "git submodule update --init --recursive --remote && cd @account-abstraction && yarn && yarn compile &&  cd ../spec && yarn && yarn build && cd ../@rip7560 && yarn && yarn compile-hardhat"}
test = "pytest --tb=short -rA -W ignore::DeprecationWarning --url http://localhost:3000/rpc --entry-point 0x0000000071727De22E5E9d8BAf0edAc6f37da032  --ethereum-node http://127.0.0.1:8545/ tests/single"
test-rip7560 = "pytest --tb=short -rA -W ignore::DeprecationWarning --url http://localhost:3000/rpc --nonce-manager 0x63f63e798f5F6A934Acf0a3FD1C01f3Fac851fF0  --stake-manager 0x570Aa568b6cf62ff08c6C3a3b3DB1a0438E871Fb --ethereum-node http://127.0.0.1:8545/ tests/rip7560"
p2ptest = "pytest --tb=short -rA -W ignore::DeprecationWarning --url http://localhost:3000/rpc --entry-point 0x0000000071727De22E5E9d8BAf0edAc6f37da032 --ethereum-node http://127.0.0.1:8545/ tests/p2p"
lint = "pylint tests"
format = "black tests"

[project]
name = "bundler-spec-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "shahafn", email = "shahaflol@gmail.com"},
]
dependencies = [
    "pytest>=7.2.0",
    "requests>=2.28.1",
    "setuptools>=65.6.0",
    "eth-utils>=1.2.0",
    "py-solc-x>=2.0.3",
    "eth-tester>=0.6.0b6",
    "web3>=5.31.1",
    "jsonrpcclient>=4.0.2",
    "jsonschema>=4.21.1",
    "black>=22.12.0",
    "pylint>=2.15.8",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
readme = "README.md"

